# ray

./: .gitignore  Makefile.am  README  config.h.in  configure.ac  configure.in
input/: scene.xml  scene2.xml
src/: Ray_Camera.cpp  Ray_Camera.hpp  Ray_Color.cpp  Ray_Color.hpp  Ray_Image.cpp  Ray_Image.hpp  Ray_Light.cpp  Ray_Light.hpp  Ray_Math.cpp  Ray_Math.hpp  Ray_RenderableObject.cpp  Ray_RenderableObject.hpp  Ray_Scene.cpp  Ray_Scene.hpp  main.cpp  ray.cpp  test_math.cpp
